--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         </activity>
 
         <activity android:name=".ui.WebViewActivity"/>
+
+        <activity android:name=".ui.search.SearchActivity"/>
+
     </application>
 
 </manifest>
