--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.administrator.fuckgank">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".App"
@@ -20,11 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ui.WebViewActivity"/>
-
-        <activity android:name=".ui.search.SearchActivity"/>
-
+        <activity android:name=".ui.WebViewActivity" />
+        <activity android:name=".ui.search.SearchActivity" />
+        <activity android:name=".ui.ShowExcitingActivity"></activity>
     </application>
 
 </manifest>
